--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ workflows:
   build_test_deploy:
     jobs:
       - build
-      - test:
+      #- test:
           requires:
             - build
       - deploy:
