--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,5 @@ workflows:
   build_test_deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - test
+      - deploy
+          
