--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 jobs:
   build:
+    working_directory: ~/tmp
     machine:
       image: ubuntu-2004:202010-01
     steps:
@@ -12,7 +13,10 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: cd ./app && npm install && npm run build
+      - run: cd ./app && npm install && npm run build >  /tmp/python-artifact
+      - store_artifacts:
+          path: /tmp/python-artifact
+          destination: artifact-file
       - persist_to_workspace:
           root: .
           paths:
@@ -29,15 +33,7 @@ jobs:
           root: .
           paths:
             - .
-  deploy:
-    machine:
-        image: ubuntu-2004:202010-01
-    steps:
-      - attach_workspace:
-          at: .
-      - checkout
-      - run: aws s3 sync ./app/build s3://circle-ci-bucket
-    
+ 
 
 workflows:
   build_test_deploy:
@@ -46,6 +42,4 @@ workflows:
       - test:
           requires:
             - build
-      - deploy:
-          requires:
-            - test
+   
