--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,19 +22,26 @@ jobs:
           paths:
             - .
             
-  test:
-    machine:
-      image: ubuntu-2004:202010-01
-    steps:
-      - attach_workspace:
-          at: .
-      - checkout
-      - run: cd ./app && npm run test
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
- 
+    test:
+      machine:
+        image: ubuntu-2004:202010-01
+      steps:
+        - attach_workspace:
+            at: .
+        - checkout
+        - run: cd ./app && npm run test
+        - persist_to_workspace:
+            root: .
+            paths:
+              - .
+    deploy:
+      machine:
+          image: ubuntu-2004:202010-01
+      steps:
+        - attach_workspace:
+            at: .
+        - checkout
+        - run: aws s3 sync ./app/build s3://circle-ci-bucket
 
 workflows:
   build_test_deploy:
@@ -43,4 +50,7 @@ workflows:
       - test:
           requires:
             - build
+      - deploy:
+            requires:
+              - test    
    
