--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     machine:
       image: ubuntu-2004:202010-01
     steps:
+      - attach_workspace:
+            at: ~/temp
       - checkout
       - run:
           name: Installing AWS CLI
@@ -18,30 +20,22 @@ jobs:
           path: /tmp/python-artifact
           destination: artifact-file
       - persist_to_workspace:
+          root: /tmp/python-artifact
+          paths:
+            - /tmp/python-artifact
+  test:
+    machine:
+      image: ubuntu-2004:202010-01
+    steps:
+      - attach_workspace:
+          at: .
+      - checkout
+      - run: cd ./app && npm run test
+      - persist_to_workspace:
           root: .
           paths:
             - .
-            
-    test:
-      machine:
-        image: ubuntu-2004:202010-01
-      steps:
-        - attach_workspace:
-            at: .
-        - checkout
-        - run: cd ./app && npm run test
-        - persist_to_workspace:
-            root: .
-            paths:
-              - .
-    deploy:
-      machine:
-          image: ubuntu-2004:202010-01
-      steps:
-        - attach_workspace:
-            at: .
-        - checkout
-        - run: aws s3 sync ./app/build s3://circle-ci-bucket
+ 
 
 workflows:
   build_test_deploy:
@@ -50,7 +44,4 @@ workflows:
       - test:
           requires:
             - build
-      - deploy:
-            requires:
-              - test    
-   
+    
