--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - attach_workspace:
-            at: ~/temp
+            at: /temp
       - checkout
       - run:
           name: Installing AWS CLI
@@ -22,7 +22,7 @@ jobs:
       - persist_to_workspace:
           root: /tmp
           paths:
-            - /tmp/python-artifact
+            - /python-artifact
   test:
     machine:
       image: ubuntu-2004:202010-01
