--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - attach_workspace:
-            at: /temp
+            at: .
       - checkout
       - run:
           name: Installing AWS CLI
@@ -20,9 +20,9 @@ jobs:
           path: /tmp/python-artifact
           destination: artifact-file
       - persist_to_workspace:
-          root: /tmp
+          root: .
           paths:
-            - /python-artifact
+            - ~/tmp/python-artifact
   test:
     machine:
       image: ubuntu-2004:202010-01
